test/Fail/Issue2027.err
Issue2027.agda:6.1-15: error: [UnboundVariablesInPatternSynonym]
Unbound variables in pattern synonym: x
when scope checking the declaration
  pattern hm = x
